--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vue/cli-service": "^4.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0"
   }
 }
